=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Changed: Re-write of Daitch-Mokotoff "sounds like" algorithm (canajun2eh)
 - Fixed: Googlemap Redraw Map/Map/Satellite/Hybrid/Terrain boxes for other Browsers (in addition to FireFox) (windmillway)
 - Added: Indi Navigator to ALL tabs except Research Assistant and Tree (Navigator can be toggled on/off with Navigator Tab) (windmillway)
 - Fixed: [ 2477484 ] [4593] Research Assistant - Mc to MAC (fisharebest)
 - Fixed: [ 2475261 ] client.php?action=getxref&position=all fails (fisharebest)
 - Fixed: [ 2474873 ] User Journal entry gets added as GEDCOM News article (canajun2eh)
 - Changed: Removed "Skip Cleanup" button on Upload GEDCOM page (canajun2eh)
 - Fixed: [ 2474045 ] Several problems when uploading GEDCOM (canajun2eh)
 - Fixed: [ 2474040 ] "Upload GEDCOM" option in Setup wizard doesn't work (canajun2eh)
 - Fixed: [ 2473198 ] Logout doesn't go back to default GEDCOM (canajun2eh)
 - Fixed: [ 2461403 ] Configured default language not being used (canajun2eh)
 - Fixed: [ 2459204 ] unable to update with GDBI (fisharebest)
 - Added: [ 2154522 ] SMTP w/ phpMailer [followup to 1869063] (wooc)
 - Added: [ 1869063 ] SMTP mail via PHPMailer added to functions_mail.php (wooc)
 - Fixed: [ 2457278 ] Advanced search doesn't work right (canajun2eh)
 - Fixed: Quick Update, Edit Name, and Add Person forms don't obey "Surname First" option (canajun2eh)
 - Fixed: Help for Hebrew and Romanized Names in Quick Update form need improvement (canajun2eh)
 - Changed: Remove "Use RTL Functions" option in GEDCOM configuration (canajun2eh) 
 - Fixed: [ 2454091 ] Error 8 in Indi list (canajun2eh)
 - Fixed: [ 2445781 ] 4559 Events of close relatives (wooc)